--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "tscheck": "tsc --project ./tsconfig.json --noEmit",
     "lint-staged": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate-css-types": "tailwindcss-classnames -i tailwind.config.js -o common/custom-styles.ts"
   },
   "husky": {
     "hooks": {
@@ -46,7 +47,9 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwind-merge": "^1.8.1",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-classnames": "^3.0.7",
     "typescript": "4.9.4"
   }
 }
