--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "tailwind-merge": "^1.8.1",
     "tailwindcss": "^3.2.4",
     "tailwindcss-classnames": "^3.0.7",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "tsconfig-paths-webpack-plugin": "^4.0.0"
   }
 }
