--- a/package.json
+++ b/package.json
@@ -61,10 +61,11 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "storybook-addon-next-router": "^4.0.2",
     "tailwind-merge": "^1.8.1",
     "tailwindcss": "^3.2.4",
     "tailwindcss-classnames": "^3.0.7",
-    "typescript": "4.9.4",
-    "tsconfig-paths-webpack-plugin": "^4.0.0"
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typescript": "4.9.4"
   }
 }
