--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "next": "13.1.1",
-    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
