--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
