--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "axios": "^1.2.6",
+    "dayjs": "^1.11.7",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
